--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "myapp-palaciospedro",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
+    "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -12,7 +11,9 @@
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-web": "^0.19.4",
+    "webpack-config": "^7.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
